# mahzen

./: .gitignore  .todo  Makefile  README.md  buf.yaml  go.mod  go.sum
api/: openapi.yaml
api/Mahzen API/: opencollection.yml
cmd/mahzen/: frontend.go  main.go
cmd/regenerate-embeddings/: main.go
cmd/reindex/: main.go
deploy/: docker-compose.yml
deploy/hydra/: hydra.yml
deploy/kratos/: identity.schema.json  kratos.yml
desktop/: index.html  package.json  vite.config.ts
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
internal/config/: config.go
internal/domain/: ai.go  auth.go  domain_test.go  entry.go  search.go  storage.go  tag.go  user.go
internal/handler/: access_token.go  auth.go  download.go  entry.go  handler_test.go  health.go  interceptor.go  middleware.go  router.go  search.go  tag.go  user.go
migrations/: 000001_create_users.up.sql  000001_init.down.sql  000001_init.up.sql  000002_create_entries.up.sql  000002_entry_file_metadata.down.sql  000002_entry_file_metadata.up.sql  000003_create_tags.up.sql  000003_entry_embedding.down.sql  000003_entry_embedding.up.sql  000004_access_tokens.up.sql  000004_create_entry_tags.up.sql  000004_remove_s3_key.down.sql  000004_remove_s3_key.up.sql  000005_add_entry_path.down.sql  000005_add_entry_path.up.sql
scripts/: gen-certs.sh  seed.sh
sqlc/: sqlc.yaml
web/: .env.development  .env.production  eslint.config.js  index.html  package.json  vite.config.ts
(+174 files in other folders)
